--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
-  "homepage": "https://YoussefDhaou.github.io/portfolio",
-  "version": "0.1.0",
+  "homepage": ".",
+  "version": "0.1.0",git 
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
